# backend/src/app.ts
@@ -17,6 +17,7 @@ import activityRoutes from './routes/activities';
 import planningRoutes from './routes/planning';
 import reviewRoutes from './routes/reviews';
 import organizerRoutes from './routes/organizers';
+import establishmentRoutes from './routes/establishments';
 import adminRoutes from './routes/admin';
 import messageRoutes from './routes/messages';
 import friendRoutes from './routes/friends';
@@ -45,6 +46,7 @@ app.use('/v1/activities', activityRoutes);
 app.use('/v1/planning', planningRoutes);
 app.use('/v1', reviewRoutes);
 app.use('/v1/organizers', organizerRoutes);
+app.use('/v1/establishments', establishmentRoutes);
 app.use('/v1/admin', adminRoutes);
 app.use('/v1/messages', messageRoutes);
 app.use('/v1/friends', friendRoutes);
